<resources>
    <string name="app_name">خَزْنَتِي</string>
    <string name="register">Register</string>
    <string name="login_id_hint">Student ID</string>
    <string name="login_password_hint">Password</string>
    <string name="login_signup_hint">Don\'t have an account? Register</string>
    <string name="Login">Login</string>
    <string name="Login2">Login?</string>

    <string name="Logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password1">Reset Password</string>

    <string name="login_email_hint">Student Email</string>
    <string name="login_Confpassword_hint"> Confirm Password</string>
    <string name="agreement">"Agree to Out Terms &amp; Conditions"</string>
    <string name="enterId">Enter ID</string>
    <string name="enterPassword">Pleasse Enter Password</string>
    <string name="entercPassword">Enter Confirm Password</string>
    <string name="enterfName">Enter name</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPhone">Enter phone</string>
    <string name="enterVEmail">Enter Valid Email "*****@student.ksu.edu.sa"</string>
    <string name="mismatch">Mismatch</string>
    <string name="entervId">Enter Valid ID</string>
    <string name="name">Name</string>
    <string name="terms_title">Terms &amp; Conditions</string>
    <string name="conditions">• Rentals are for a period of one (1) semester. \n• You must provide your own lock. \n• Rates are not pro-rated.  \n• The خَزْنَتِي is not responsible for any damage, theft or vandalism that may occur to the \nlocker and/or its contents. \n• Lockers must be cleaned out at the end of each rental period (by the last day of final exams). Any contents remaining in the locker\n at the end of the semester will be disposed of. \n• No stickers, decals or markings of any kind \n are permitted on, or in, any locker. Any \n evidence of such will result in forfeiture of the locker and a possible fine. \n• Locks illegally placed on a locker will be removed and the contents disposed of. \n• Lockers are the property of خَزْنَتِي and as \n such, خَزْنَتِي reserves the right to remove the lock and the contents of any locker.</string>
    <string name="ok">Ok</string>
    <string name="send">Send</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_MyLocker">My Locker</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_Logout">Logout</string>
    <string name="Goodbye">To Say Goodbye!</string>
    <string name="nav_header_title">Atheer Alghannam</string>
    <string name="nav_header_titleID">437200000</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="passLength">password should be 6 characters at least.</string>
    <string name="plz">Please Wait..</string>
    <string name="language">Language</string>
    <string name="notify">Notifications</string>
    <string name="language1">Arabic</string>
    <string name="language2">English</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password?</string>
    <string name="phone_error">Please enter valid 10 digit phone number</string>
    <string name="checkBox_error">You have to agree to complete Registeration!</string>
    <string name="complete_Registeration">registration successful, please check your student mail for verification.</string>
    <string name="changes_saved">Changes are saved successfully!</string>
    <string name="current_password_hint">Current password</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_new_password_hint">Confirm new password</string>
    <string name="incorrectPassword">The password you entered was incorrect.</string>
    <string name="menu_students">Students</string>
    <string name="login_justid_hint">ID</string>
    <string name="admin">Admin</string>
    <string name="booking">Booking Locker</string>
    <string name="Lockersinfo">Locker Information</string>
    <string name="book">Book</string>
    <string name="lockerNumber">Locker Number:</string>
    <string name="lockerSize">Locker Size:</string>
    <string name="lockerPrice">Locker Price:</string>
    <string name="larg">Larg</string>
    <string name="small">Small</string>
    <string name="pookingperiod">This booking for one semester.</string>
    <string name="lockerArea">Area:</string>
    <string name="lockerAvailable">Availabilty:</string>
    <string name="payment">Coming Soon.. Sprint 3!</string>
    <string name="bookingmessage">You should to pay to reserve this locker.</string>
    <string name="lockerNum">Number:</string>
    <string name="lockerAva">Status: </string>
    <string name="bookLocker">Book</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="unav">Sorry, This locker is unavailable</string>
    <string name="pay">Payment</string>

</resources>
