<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

<!--        <TextView-->
<!--            style="@style/headerTextPrimary"-->
<!--            android:text="@string/Lockersinfo"-->
<!--            android:textColor="@color/colorPrimaryDark"-->
<!--            android:layout_marginTop="@dimen/loginViewsMargin"-->
<!--            android:padding="10dp"-->
<!--            />-->


        <!--        <TextView-->
        <!--            style="@style/modifiedEditText"-->
        <!--            -->
        <!--            android:textColor="@color/colorPrimaryDark"-->
        <!--            android:textStyle="bold"-->
        <!--            android:padding="10dp"-->
        <!--            android:textSize="20dp"-->

        <!--            />-->



        <TextView
            android:id="@+id/lockerNum"
            style="@style/modifiedEditText"
            android:text="@string/lockerNumber"
            android:textColor="@color/colorPrimaryDark"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            />
<!--        <TextView-->
<!--            android:id="@+id/lockerArea"-->
<!--            style="@style/modifiedEditText"-->
<!--            android:text="@string/lockerArea"-->
<!--            android:textColor="@color/colorPrimaryDark"-->
<!--            android:padding="10dp"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="20dp"-->
<!--            />-->

        <TextView
            android:id="@+id/lockerSize"
            style="@style/modifiedEditText"
            android:text="@string/lockerSize"
            android:textColor="@color/colorPrimaryDark"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/lockerAva"
            style="@style/modifiedEditText"
            android:text="@string/lockerAvailable"
            android:textColor="@color/colorPrimaryDark"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/lockerPrice"
            style="@style/modifiedEditText"
            android:text="@string/lockerPrice"
            android:textColor="@color/colorPrimaryDark"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <TextView
            style="@style/modifiedEditText"
            android:text="@string/pookingperiod"
            android:textStyle="bold"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/gray"
            android:textSize="15dp"
            />
        <Button
            android:id="@+id/booking_button"
            style="@style/loginButton"

            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/book" />




    </LinearLayout>
</androidx.cardview.widget.CardView>
