<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/reset_password1"
            android:textColor="@color/colorPrimaryDark" />



        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword1"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/CurrentPassword"
            style="@style/modifiedEditText"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/current_password_hint"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorLink="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword2"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/newPassword"
                style="@style/modifiedEditText"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"

                android:textColorLink="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword3"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/confirmNewPassword"
                style="@style/modifiedEditText"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/confirm_new_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:textColorLink="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/saveNewPasswordButton"
            style="@style/loginButton"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>



    </LinearLayout>
</androidx.cardview.widget.CardView>
