<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/name"
                style="@style/modifiedEditText"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                android:hint="@string/name"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/id"
                style="@style/modifiedEditText"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_credit_card_black_24dp"
                android:hint="@string/login_id_hint"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/phone"
                style="@style/modifiedEditText"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_phone_android_black_24dp"
                android:hint="Mobile Number"
                android:maxLength="10"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/parent"-->
<!--            android:layout_marginTop="@dimen/signup_text_margin_top">-->

<!--            <EditText-->
<!--                android:id="@+id/email"-->
<!--                style="@style/modifiedEditText"-->
<!--                android:backgroundTint="@color/colorPrimary"-->
<!--                android:drawableStart="@drawable/ic_mail_outline_black_24dp"-->
<!--                android:hint="@string/login_email_hint"-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:maxLength="28"-->
<!--                android:maxLines="1" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/password"
                style="@style/modifiedEditText"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/cpassword"
                style="@style/modifiedEditText"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/login_Confpassword_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/agreement"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/register_button"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/register" />


        <TextView
            android:id="@+id/login_text"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="viewRegisterClicked"
            android:text="@string/Login2"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
