<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Switch
        android:id="@+id/setNotif"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="end"


        android:paddingLeft="@dimen/album_title_padding"
        android:paddingTop="@dimen/album_title_padding"
        android:paddingRight="@dimen/album_title_padding"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:drawableStart="@drawable/ic_notifications"

        android:text="@string/notify" />



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>


    <CheckedTextView
        android:id="@+id/setLang"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:drawableStart="@drawable/ic_language_black_24dp"

        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:gravity="center"
        android:paddingLeft="@dimen/album_title_padding"
        android:paddingTop="@dimen/album_title_padding"
        android:paddingRight="@dimen/album_title_padding"
        android:text="@string/language"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>
    <CheckedTextView
        android:id="@+id/setResetPassword"
        android:layout_width="match_parent"
        android:layout_height="80dp"
android:drawableStart="@drawable/ic_settings_black_24dp"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:gravity="center"
        android:paddingLeft="@dimen/album_title_padding"
        android:paddingTop="@dimen/album_title_padding"
        android:paddingRight="@dimen/album_title_padding"
        android:text="@string/reset_password1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>
</LinearLayout>